--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Joined Volleyball Team Team August 2020 </li>
 </ul>   
 </p>
 <p class="mb-0">I hope to one day make it to the Olympics and win Gold. I also want to own my own bussiness one day. The video below is one of the greatest teams in USA history.  </p>
- <center><iframe width="560" height="315" src="https://www.youtube.com/watch?v=tIorbjjOW_U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+ <center><iframe width="560" height="315" src="https://youtu.be/tIorbjjOW_U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  </center>
 </div>
 </div>
