--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
  </nav>
  
  <!-- Page Header -->
- <header class="masthead" style="background-image: url('../images/DSC_0747.jpeg')" alt="">
+ <header class="masthead" alt="">
    <div class="overlay"></div>
    <div class="container">
      <div class="row">
@@ -224,7 +224,7 @@ Contact page
  </nav>
  
  <!-- Page Header -->
- <header class="masthead" style="background-image: url('img/contact-bg.jpg')">
+ <header class="masthead">
    <div class="overlay"></div>
    <div class="container">
      <div class="row">
