--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
          <div class="page-heading">
            <h1>About Me</h1>
            <span class="subheading">This is what I do.</span>
-           <img src= "APhoto.jpg" 
+           <img src= "anthony1.jpeg" style="width: 300px;   height: 320px;"> 
            <br/>
            <br/>
            <br/>
